Fix sidenav collapse transition

--- a/jam-time-frontend/src/app/shared/layout/layout.component.scss
+++ b/jam-time-frontend/src/app/shared/layout/layout.component.scss
@@ -19,6 +19,7 @@ mat-sidenav {
   box-shadow: 6px 0 10px -5px rgba(0, 0, 0, 0.3);
   border-radius: 0;
   width: 240px;
+  transition: width 0.2s ease-in;
 }
 
 .mobile-view mat-sidenav {
